--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,38 +5,65 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+/* LOGIN AND REGISTER */
+
+.forms {
+  min-height: 90vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+  width: 50%;
+  margin: 0 auto;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.auth-form-container, .auth-form-login, .auth-form-register{
+   display: flex;
+   flex-direction: column;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.auth-form-container {
+  padding: 4rem;
+  border: 1px solid white;
+  border-radius: 10px;
+  margin: 0.5 rem;
+  background-image: linear-gradient(79deg, #7439db, #c66fcb 48%, #f7944d);
+  width: 100%;
 }
 
-.card {
-  padding: 2em;
+label {
+  text-align: left;
+  padding: 0.25rem 0;
+  color: white;
 }
 
-.read-the-docs {
-  color: #888;
+input {
+  margin: 0.5rem 0;
+  padding: 1rem;
+  border: none;
+  border-radius: 10px;
+  color: #7439db
+}
+
+input:focus {
+  outline: #f7944d;
+}
+
+button {
+  border: none;
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  cursor: pointer;
+  color: #7439db;
+}
+
+.link-btn {
+   background: none;
+   color: white;
+   text-decoration: underline;
+}
+
+.form-title {
+  color: white;
 }
