--- a/client/src/components/nav/styles.css
+++ b/client/src/components/nav/styles.css
@@ -23,9 +23,38 @@
   .navbar-brand {
     color: #fff;
     font-size: 2rem;
+    padding-left: 20%;
   }
 
   .navbar-brand:hover {
     color: #fff;
+  }
+
+   .navbar-container {
+    background-color: #0a6ebd;
+    margin-bottom: 20px;
+    height: 100px;
+    font-size: 1.3rem;
+    display: flex;
+    align-items: center; /* Add this to vertically center the content */
+  }
+  .navbar-content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 100%;
+    padding: 0 20px;
+  }
+  
+  .nav-keys {
+    color: #fff;
+    font-size: 1.2rem;
+    margin-right: 20px;
+  }
+  
+  .navbar-title {
+    font-size: 2.2rem;
+    padding-left: 100px;
+
   }
 
