--- a/client/src/App.css
+++ b/client/src/App.css
@@ -96,7 +96,7 @@
   border: 1px solid white;
   border-radius: 10px;
   margin: 0.5 rem;
-  background-image: linear-gradient(79deg, #7439db, #c66fcb 48%, #f7944d);
+  background-color:#4682A9;
   width: 100%;
 }
 
@@ -192,6 +192,12 @@ button {
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
   background-color: #fff;
   text-align: center;
+  transition: all 300ms ease;
+}
+
+.pokemon-card:hover {
+  transform: scale(105%);
+  cursor: pointer;
 }
 
 .pokemon-card h2 {
