Some test files working

--- a/client/src/pages/StudyPage/styles.css
+++ b/client/src/pages/StudyPage/styles.css
@@ -26,6 +26,9 @@
   .display-none {
     display: none;
   }
+  .visibility-hidden {
+    visibility: hidden;
+  }
 
   .study-page{
     display: flex;
